crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@85.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '@ + 1'::jsonpath;"
---
SelectStmt@0..25
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..24
    TypeCast@7..24
      AConst@7..14
        Sconst@7..14 "'@ + 1'"
      Typecast@14..16 "::"
      TypeName@16..24
        Ident@16..24 "jsonpath"
  Ascii59@24..25 ";"

