crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@94.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '((($ + 1)).a + ((2)).b ? ((((@ > 1)) || (exists(@.c)))))'::jsonpath;"
---
SelectStmt@0..76
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..75
    TypeCast@7..75
      AConst@7..65
        Sconst@7..65 "'((($ + 1)).a + ((2)) ..."
      Typecast@65..67 "::"
      TypeName@67..75
        Ident@67..75 "jsonpath"
  Ascii59@75..76 ";"

