crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@95.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$ ? (@.a < 1)'::jsonpath;"
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    TypeCast@7..32
      AConst@7..22
        Sconst@7..22 "'$ ? (@.a < 1)'"
      Typecast@22..24 "::"
      TypeName@24..32
        Ident@24..32 "jsonpath"
  Ascii59@32..33 ";"

